# italian-tax-validators

./: API.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: publish-to-pypi.yml
italian_tax_validators/: __init__.py  cli.py  comuni.py  validators.py
tests/: __init__.py  test_italian_tax_validators.py
