[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "italian-tax-validators"
version = "1.0.0"
description = "Python library for validating Italian Codice Fiscale and Partita IVA"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Michele Broggi", email = "hello@example.com"}
]
keywords = [
    "italian",
    "codice-fiscale",
    "partita-iva",
    "tax-id",
    "validation",
    "fiscal-code",
    "vat"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Italian",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/thesmokinator/italian-tax-validators"
Documentation = "https://github.com/thesmokinator/italian-tax-validators#readme"
Repository = "https://github.com/thesmokinator/italian-tax-validators.git"
Issues = "https://github.com/thesmokinator/italian-tax-validators/issues"

[tool.setuptools]
packages = ["italian_tax_validators"]

[tool.setuptools.package-data]
italian_tax_validators = ["py.typed"]
